--- a/src/css/Description.css
+++ b/src/css/Description.css
@@ -1,5 +1,6 @@
 .description {
-    margin: 5px;
-    padding: 5px;
-    border: solid 1px black;
+    margin: 5%;
+    padding: 5%;
+    border: solid 1px goldenrod;
+    border-radius: 2px;
 }
