--- a/src/css/CompleteButton.css
+++ b/src/css/CompleteButton.css
@@ -1,12 +1,12 @@
 .removeButton {
-    color: tomato;
+    color: green;
     background: none;
     cursor: pointer;
-    border: solid 1px tomato;
+    border: solid 1px green;
     border-radius: 3px;
     position: absolute;
-    margin-right: 3px;
+    margin-left: 3px;
     margin-top: 3px;
     top: 0px;
-    right: 0px;
+    left: 0px;
 }
