--- a/src/css/Button.css
+++ b/src/css/Button.css
@@ -1,4 +1,4 @@
-.button {
+/* .button {
   margin: 5px;
   height: 25px;
   background-color: steelblue;
@@ -9,4 +9,30 @@
 
 .button:active {
   background-color: skyblue;
+} */
+
+.completeButton {
+  color: green;
+  background: none;
+  cursor: pointer;
+  border: solid 1px green;
+  border-radius: 3px;
+  position: absolute;
+  margin-left: 3px;
+  margin-top: 3px;
+  top: 0px;
+  left: 0px;
+}
+
+.removeButton {
+  color: tomato;
+  background: none;
+  cursor: pointer;
+  border: solid 1px tomato;
+  border-radius: 3px;
+  position: absolute;
+  margin-right: 3px;
+  margin-top: 3px;
+  top: 0px;
+  right: 0px;
 }
