--- a/src/css/InputForm.css
+++ b/src/css/InputForm.css
@@ -1,6 +1,7 @@
 .input-form {
 	height: 2.5em;
 	width: 80%;
+	margin-bottom: 2%;
 	border: 1px solid #a4a4a4;
 	box-shadow: 1px 1px 2px goldenrod;
 }
