--- a/src/css/CompleteButton.css
+++ b/src/css/CompleteButton.css
@@ -5,8 +5,10 @@
     border: solid 1px green;
     border-radius: 3px;
     position: absolute;
-    margin-left: 3px;
-    margin-top: 3px;
+    /* margin-left: 1px;
+    margin-top: 3px; */
+    margin-left: 1%;
+    margin-top: 1%;
     top: 0px;
     left: 0px;
 }
