--- a/src/css/DateInfo.css
+++ b/src/css/DateInfo.css
@@ -1,9 +1,6 @@
 .dateInfoOnTop {
-    position: absolute;
-    top: 0px;
-    left: 20%;
-    right: 20%;
-    margin-top: 1%;
+    width: 70%;
+    margin: auto;
     border: solid 1px gray;
     border-radius: 3px;
 }
